tippyjs: Show dark colours in night theme.
We extend light-theme to show dark colours in night theme.

--- a/static/styles/night_mode.css
+++ b/static/styles/night_mode.css
@@ -10,6 +10,40 @@ body.night-mode {
         color: inherit;
     }
 
+    .tippy-box[data-theme~='light-border'] {
+        .tippy-content a {
+            color: hsl(236, 33%, 90%);
+        }
+        &[data-placement^='top'] {
+            > .tippy-arrow {
+              &::before {
+                border-top-color: hsl(235, 18%, 7%);
+              }
+            }
+        }
+        &[data-placement^='bottom'] {
+            > .tippy-arrow {
+              &::before {
+                border-bottom-color: hsl(235, 18%, 7%);
+              }
+            }
+        }
+        &[data-placement^='left'] {
+            > .tippy-arrow {
+              &::before {
+                border-left-color: hsl(235, 18%, 7%);
+              }
+            }
+        }
+        &[data-placement^='right'] {
+            > .tippy-arrow {
+              &::before {
+                border-right-color: hsl(235, 18%, 7%);
+              }
+            }
+        }
+    }
+
     .app-main,
     .header-main,
     #message_view_header_underpadding,
@@ -290,6 +324,7 @@ on a dark background, and don't change the dark labels dark either. */
         box-shadow: 0 0 30px hsl(212, 32%, 7%);
     }
 
+    .tippy-box[data-theme~='light-border'],
     .dropdown-menu ul,
     .dropdown .dropdown-menu,
     .popover,
