Improve delete message warning.
replace the modal with a popover widget.

issue:#16426.

--- a/static/styles/popovers.css
+++ b/static/styles/popovers.css
@@ -475,3 +475,8 @@ ul {
         margin-left: 5px !important;
     }
 }
+
+.message-delete-popover {
+    margin-top: 20px;
+    margin-right: 27px;
+}
