left-sidebar: Display ellipsis icon by default on touch-based devices.
Hover does not work for touch-based devices like mobile phones.
Hence the the icons does not appear, making the user unaware of its
presence on such devices. The following media property displays the
icon by default for such behaviour.

--- a/static/styles/left_sidebar.css
+++ b/static/styles/left_sidebar.css
@@ -379,6 +379,17 @@ li.top_left_recent_topics {
     &:hover {
         color: hsl(0, 0%, 0%) !important;
     }
+
+    /*
+        Hover does not work for touch-based devices like mobile phones.
+        Hence the the icons does not appear, making the user unaware of its
+        presence on such devices. The following media property displays the
+        icon by default for such behaviour.
+    */
+
+    @media (hover: none) {
+        display: block;
+    }
 }
 
 /*
