--- a/templates/zerver/app/search_operators.html
+++ b/templates/zerver/app/search_operators.html
@@ -45,6 +45,10 @@
                 <td class="definition">{{ _('Search all public streams in the organization.') }}</td>
             </tr>
             <tr>
+                <td class="operator">streams:all</td>
+                <td class="definition">{{ _('Search all public and private streams with shared history in the organization.') }}</td>
+            </tr>
+            <tr>
                 <td class="operator">is:alerted</td>
                 <td class="definition">{{ _('Narrow to messages with alert words.') }}</td>
             </tr>
