--- a/static/templates/settings/dropdown_list_widget.hbs
+++ b/static/templates/settings/dropdown_list_widget.hbs
@@ -1,5 +1,9 @@
 <div class="input-group dropdown-list-widget" id="{{widget_name}}_widget">
-    <span class="{{widget_name}}_setting dropup actual-dropdown-menu prop-element" id="id_{{widget_name}}" aria-labelledby="{{widget_name}}_label">
+    <label for="{{widget_name}}" id="{{widget_name}}_label" class="inline-block">
+        {{ label }}
+    </label>
+    <span class="{{widget_name}}_setting dropup actual-dropdown-menu prop-element" id="id_{{widget_name}}"
+        name="{{widget_name}}" aria-labelledby="{{widget_name}}_label">
         <button class="button small rounded dropdown-toggle" data-toggle="dropdown">
             <span id="{{widget_name}}_name"></span>
             <i class="fa fa-pencil"></i>
