emoji_rendering: Increase emoji size if its only message content.
The sizes of emoji were kept the same irrespective,
of the message content.

Added a new feature of rendering the emoji at larger size,
when its the only message content.
The sizes of emoji vary as follows:
larger-devices: 32x32
smaller-devices: 22x22

Closes #15390.

--- a/static/styles/rendered_markdown.css
+++ b/static/styles/rendered_markdown.css
@@ -115,6 +115,11 @@
         width: 20px;
     }
 
+    .large-emoji {
+        height: 32px;
+        width: 32px;
+    }
+
     /* Mentions and alert words */
     .user-mention-me :not(.silent) {
         background-color: hsl(112, 88%, 87%);
@@ -477,6 +482,12 @@
             display: block;
             max-width: 100%;
             margin-top: 10px;
+        }
+    }
+    .rendered_markdown {
+        .large-emoji {
+            width: 22px;
+            height: 22px;
         }
     }
 }
