display_settings: Allow user to set default_view.
TextField is used to allow users to set long stream + topic narrow
names in the urls.

We currently restrict users to only set "all_messages" and
"recent_topics" as narrows.

This commit achieves 3 things:
* Removes recent topics as the default view which loads when
  hash is empty.
* Loads default_view when hash is empty.
* Loads default_view on pressing escape key when it is unhandled by
  other present UI elements.

NOTE: After this commit loading zulip with an empty hash will
automatically set hash to default_view.  Ideally, we'd just display
the default view without a hash, but that involves extra complexity.

One exception is when user is trying to load an overlay directly,
i.e. zulip is loaded with an overlay hash. In this case,
we render recent topics is background irrespective of default_view.

We consider this last detail to be a bug not important enough to block
adding this setting.

--- a/static/templates/settings/display_settings.hbs
+++ b/static/templates/settings/display_settings.hbs
@@ -22,6 +22,15 @@
             <div class="alert-notification" id="display-settings-status"></div>
 
             <div class="input-group">
+                <label for="default_view" class="dropdown-title">{{t "Default view" }}
+                    {{> ../help_link_widget link="/help/change-default-view" }}
+                </label>
+                <select name="default_view" id="default_view">
+                    {{> dropdown_options_widget option_values=default_view_values}}
+                </select>
+            </div>
+
+            <div class="input-group">
                 <label for="color_scheme" class="dropdown-title">{{t "Color scheme" }}
                 </label>
                 <select name="color_scheme" id="color_scheme">
