--- a/templates/zerver/app/keyboard_shortcuts.html
+++ b/templates/zerver/app/keyboard_shortcuts.html
@@ -52,6 +52,10 @@
                     <td class="definition">{% trans %}Show keyboard shortcuts{% endtrans %}</td>
                     <td><span class="hotkey"><kbd>?</kbd></span></td>
                 </tr>
+                <tr>
+                    <td class="definition">{% trans %}Go to default view{% endtrans %}</td>
+                    <td><span class="hotkey"><kbd>Esc</kbd> or <kbd>Ctrl</kbd> + <kbd>[</kbd></span></td>
+                </tr>
             </table>
         </div>
         <div>
@@ -241,7 +245,7 @@
                 </thead>
                 <tr>
                     <td class="definition">{% trans %}View recent topics{% endtrans %}</td>
-                    <td><span class="hotkey"><kbd>T</kbd> or <kbd>Esc</kbd> or <kbd>Ctrl</kbd> + <kbd>[</kbd></span></td>
+                    <td><span class="hotkey"><kbd>T</kbd></span></td>
                 </tr>
                 <tr>
                     <td class="definition">{% trans %}Search recent topics{% endtrans %}</td>
