change UI: change the delete button with delete icon.

--- a/static/templates/admin_user_group_list.hbs
+++ b/static/templates/admin_user_group_list.hbs
@@ -13,14 +13,12 @@
             <i class="fa fa-trash-o" aria-hidden="true"></i>
         </button> 
     </h4>
-    <p class="subscribers">{{t 'Subscribers hello brother' }}</p>
+    <p class="subscribers">{{t 'Subscribers' }}</p>
     <div class="pill-container" data-group-pills="{{id}}">
         <div class="input" contenteditable="true" data-placeholder="{{t 'Add member...' }}"></div>
     </div>
     <p class="save-instructions">
         {{t 'Click outside the input box to save. We\'ll automatically notify anyone that was added or removed.'}}
-        
-
     </p>
 </div>
 {{/with}}
