change: delete button with delete icon

--- a/static/templates/admin_user_group_list.hbs
+++ b/static/templates/admin_user_group_list.hbs
@@ -12,9 +12,9 @@
         <button class="button save-status btn-danger small">
             {{t 'Discard changes' }}
         </button>
-        <button class="button rounded small delete btn-danger">
-            {{t 'Delete' }}
-        </button>
+         <button class="button rounded small delete btn-danger">
+            <i class="fa fa-trash-o" aria-hidden="true"></i>
+        </button> 
     </h4>
     <p class="subscribers">{{t 'Subscribers' }}</p>
     <div class="pill-container" data-group-pills="{{id}}">
