update: save button, and discard button removed

--- a/static/templates/admin_user_group_list.hbs
+++ b/static/templates/admin_user_group_list.hbs
@@ -9,10 +9,7 @@
             <img class="checkmark" src="/static/images/checkbox-green.svg" />
             {{t 'Saved' }}
         </button>
-        <button class="button save-status btn-danger small">
-            {{t 'Discard changes' }}
-        </button>
-         <button class="button rounded small delete btn-danger">
+        <button class="button rounded small delete btn-danger">
             <i class="fa fa-trash-o" aria-hidden="true"></i>
         </button> 
     </h4>
@@ -21,7 +18,7 @@
         <div class="input" contenteditable="true" data-placeholder="{{t 'Add member...' }}"></div>
     </div>
     <p class="save-instructions">
-        {{t "Click outside the input box to save. We'll automatically notify anyone that was added or removed."}}
+        {{t 'Click outside the input box to save. We\'ll automatically notify anyone that was added or removed.'}}
     </p>
 </div>
 {{/with}}
