--- a/templates/zerver/register.html
+++ b/templates/zerver/register.html
@@ -102,7 +102,20 @@ Form is validated both client-side using jquery-validate (see signup.js) and ser
                     <input type='hidden' name='key' value='{{ key }}' />
                     <input type='hidden' name='timezone' id='timezone'/>
                     <label for="id_email" class="inline-block label-title">{{ _('Email') }}</label>
-                    <div id="id_email">{{ email }}</div>
+                    <div class="email-visibility-text">
+                        {% if EMAIL_ADDRESS_VISIBILITY == EMAIL_ADDRESS_VISIBILITY_ALL %}
+                        This email address will be visible to all users.
+                        {% elif EMAIL_ADDRESS_VISIBILITY == EMAIL_ADDRESS_VISIBILITY_ADMINS %}
+                        This email address will only be visible to admin users.
+                        {% elif EMAIL_ADDRESS_VISIBILITY == EMAIL_ADDRESS_VISIBILITY_NONE %}
+                        This email address will not be visible to any users.
+                        {% else %}
+                        This email address will be visible to all users.
+                        {% endif %}
+                    </div>
+                    <div class="input-box">
+                        <input id="id_email" type="text" value="{{ email }}" disabled />
+                    </div>
                 </div>
 
                 {% if accounts %}
