--- a/templates/zerver/app/settings_overlay.html
+++ b/templates/zerver/app/settings_overlay.html
@@ -127,7 +127,7 @@
                     {% endif %}
                 </li>
                 {% endif %}
-                <li tabindex="0" data-section="filter-settings">
+                <li tabindex="0" data-section="linkifier-settings">
                     <i class="icon fa fa-font" aria-hidden="true"></i>
                     <div class="text">{{ _('Linkifiers') }}</div>
                     {% if not is_admin %}
