settings css: Only allow to resize the textarea vertically.
Changing the custom_user_field "Biography" textarea horizontally
changes the position of user-avatar-section at the bottom of the
page. To fix this, the textarea is only allowed to resize
vertically.

Fixes #17617.

--- a/static/styles/settings.css
+++ b/static/styles/settings.css
@@ -1400,6 +1400,7 @@ input[type="checkbox"] {
         textarea {
             width: 320px;
             height: 80px;
+            resize: vertical;
         }
 
         &:hover .remove_date {
